--- a/_i18n/it.yml
+++ b/_i18n/it.yml
@@ -1,4 +1,4 @@
 general:
   save_date_message: Save the date
-  date_and_location: Amburgo - 20 Giugno 2020
+  date_and_location: Amburgo - 17 Luglio 2021
   more_info: Saremo felici di festeggiare con voi. Ci saranno più informazioni con l'invito
